objects/Standard_How_To__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Tab</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <label>Additional Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Chat_Answer__c</fullName>
        <label>Chat Answer</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Findings_and_Resolution__c</fullName>
        <label>Findings and Resolution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Comments_and_Findings__c</fullName>
        <label>Internal Comments and Findings</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Release_Information_and_Roadmap_Details__c</fullName>
        <label>Release Information and Roadmap Details</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Resolution_Procedures__c</fullName>
        <label>Resolution Procedures</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Short_Problem_Description__c</fullName>
        <label>Short Problem Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Supporting_Attachments__c</fullName>
        <label>Supporting Attachments</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Video_optional__c</fullName>
        <label>Video (optional)</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Standard How To</label>
    <pluralLabel>Standard How To</pluralLabel>
</CustomObject>